fix contrast for a11y and add tooltips for platform links

--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -1,14 +1,13 @@
-.button{
-    background-color: grey;
+.linkEmail {
+    background-color: rgb(112,112,112);
     text-align: center;
-    border: 2px solid grey;
     border-radius: 30px;
-    padding: 6px 10px;
+    padding: 10px 10px;
     color: white;
-    font-size: 18px;
     min-height: fit-content;
 }
 
-.button:hover {
-    background-color: rgba(128, 128, 128, 0.6);
+.linkEmail:hover {
+    background-color: rgb(112,112,112, 0.7);
+    /* background-color: #CC3399; */
 }
