--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -2,7 +2,6 @@
     display: flex; 
     padding: 1rem 5rem;
     justify-content: space-between;
-    align-items: stretch;
     align-items: center;
     background-color: #f1f1f1;
     position: -webkit-sticky; /* Safari */
@@ -15,7 +14,6 @@
 }
 
 .nav_link {
-    font-size: 18px;
     position: relative;
     transition: all 0.2s;
     text-decoration: none;
@@ -32,6 +30,11 @@
     flex-grow: 1;
 }
 
+.nav_menulist button {
+    padding: 0;
+    margin-right: 1rem;
+}
+
 .nav_link::before {
     content: "";
     position: absolute;
@@ -41,6 +44,7 @@
     height: 6px;
     transition: all 0.2s;
     background-color: black;
+    /* background-color: #CC3399; */
 }
 
 .nav_link:hover::before, 
@@ -54,9 +58,8 @@
 }
 
 .nav_menulist .download_resume{
-    background-color: grey;
+    background-color: rgb(112,112,112);
     text-align: center;
-    border: 2px solid grey;
     border-radius: 30px;
     padding: 6px 10px;
 }
@@ -66,5 +69,5 @@
 }
 
 .nav_menulist div:last-child:hover {
-    background-color: rgba(128, 128, 128, 0.6);
+    background-color: rgba(112, 112, 112, 0.7);
 }
